# alpha3-model

./: .gitignore  .gitmodules  COPYRIGHT.txt  LICENSE  NAVIGATION.md  README.md  REVIEW.md  TREE.md  deploy.py  pyproject.toml
src/: ALPHA3.py
src/alpha3/: __init__.py  _bridge.py  api.py
src/x64/: __init__.py
src/x86/: __init__.py
tests/: test_api.py
