[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha3-py"
version = "1.0.0"
description = "Python 3 library wrapper for SkyLined ALPHA3 alphanumeric shellcode encoder"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "See COPYRIGHT.txt"}
authors = [
  {name = "SkyLined"},
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["ALPHA3", "charsets", "encode", "io", "print_functions"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alpha3 = ["**/*.bin", "**/*.asm", "*.txt", "*.md"]
