[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha3-py"
version = "1.0.0"
description = "Python 3 library wrapper for SkyLined ALPHA3 alphanumeric shellcode encoder"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "COPYRIGHT.txt"}
authors = [
  {name = "SkyLined"},
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["alpha3"]
