[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha3-py"
version = "1.0.0"
description = "Python 3 library wrapper for SkyLined ALPHA3 alphanumeric shellcode encoder"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "MindednessKind", email = "mindednesskind@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/MindednessKind/alpha3-model"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["alpha3"]
